--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="Plutonic Clothing" content="Clothing ecommerce website" />
         <link
